--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title> 
+    <title>Portafolio web</title> 
 </head>
 <body >
         <table bgcolor="#692173"  cellspacing="100%px" Width="100%px" height="100%px">
